# FRT_dummy

./: CMakeLists.txt  package.xml
doc/: README_dummy_mate.md  README_template.md  dummy_mate.docx  dummy_mate.docx:Zone.Identifier  ~$mmy_mate.docx
include/: imageProcess.h
launch/: dummy_mate.launch
src/: imageProcess.cpp  savesubscribe.txt  subscribe.cpp
